syntax = "proto3";

package types;

option go_package = "github.com/ydb-platform/nbs/cloud/disk_manager/internal/pkg/types";

////////////////////////////////////////////////////////////////////////////////

// These values are stored in DB, do not shuffle them around.
enum DiskKind {
    DISK_KIND_SSD = 0;
    DISK_KIND_HDD = 1;
    DISK_KIND_SSD_NONREPLICATED = 2;
    DISK_KIND_SSD_MIRROR2 = 3;
    DISK_KIND_SSD_LOCAL = 4;
    DISK_KIND_SSD_MIRROR3 = 5;
    DISK_KIND_HDD_NONREPLICATED = 6;
}

// These values are stored in DB, do not shuffle them around.
enum PlacementStrategy {
    PLACEMENT_STRATEGY_SPREAD = 0;
    PLACEMENT_STRATEGY_PARTITION = 1;
}

////////////////////////////////////////////////////////////////////////////////

enum EncryptionMode {
    NO_ENCRYPTION = 0;
    ENCRYPTION_AES_XTS = 1;
}

message KmsKey {
    string KekId = 1;
    bytes EncryptedDEK = 2;
    string TaskId = 3;
}

message EncryptionDesc {
    EncryptionMode Mode = 1;
    oneof key {
        bytes KeyHash = 2;
        KmsKey KmsKey = 3;
    }
}

////////////////////////////////////////////////////////////////////////////////

message Disk {
    string ZoneId = 1;
    string DiskId = 2;
}

message DiskPool {
    string ZoneId = 1;
    uint32 Capacity = 2;
}

////////////////////////////////////////////////////////////////////////////////

enum FilesystemKind {
    FILESYSTEM_KIND_SSD = 0;
    FILESYSTEM_KIND_HDD = 1;
}
